@@ -76,3 +76,4 @@ Fixes/Patches incorporated from:
 	Holger Lehmann
 	Dave Sugar
 	Gavan Fantom
+	Andreas Behr
