@@ -402,125 +402,6 @@ bool mysqlcursor::inputBindClob(const char *variable,
 						int16_t *isnull) {
 	return inputBindBlob(variable,variablesize,value,valuesize,isnull);
 }
-
-bool mysqlcursor::outputBindString(const char *variable, 
-						uint16_t variablesize,
-						char *value,
-						uint16_t valuesize,
-						int16_t *isnull) {
-
-	if (mysqlconn->fakebinds || !usestmtprepare) {
-		return true;
-	}
-
-	// don't attempt to bind beyond the number of
-	// variables defined when the query was prepared
-	if (bindcounter>bindcount) {
-		return false;
-	}
-
-	bindvaluesize[bindcounter]=valuesize;
-
-	bind[bindcounter].buffer_type=MYSQL_TYPE_STRING;
-	bind[bindcounter].buffer=(void *)value;
-	bind[bindcounter].buffer_length=valuesize;
-	bind[bindcounter].length=&bindvaluesize[bindcounter];
-	bind[bindcounter].is_null=(my_bool *)isnull;
-	bindcounter++;
-
-	return true;
-}
-
-bool mysqlcursor::outputBindInteger(const char *variable, 
-						uint16_t variablesize,
-						int64_t *value,
-						int16_t *isnull) {
-
-	if (mysqlconn->fakebinds || !usestmtprepare) {
-		return true;
-	}
-
-	// don't attempt to bind beyond the number of
-	// variables defined when the query was prepared
-	if (bindcounter>bindcount) {
-		return false;
-	}
-
-	bindvaluesize[bindcounter]=sizeof(int64_t);
-
-	bind[bindcounter].buffer_type=MYSQL_TYPE_LONGLONG;
-	bind[bindcounter].buffer=(void *)value;
-	bind[bindcounter].buffer_length=sizeof(int64_t);
-	bind[bindcounter].length=&bindvaluesize[bindcounter];
-	bind[bindcounter].is_null=(my_bool *)isnull;
-	bindcounter++;
-
-	return true;
-}
-
-bool mysqlcursor::outputBindDouble(const char *variable, 
-						uint16_t variablesize,
-						double *value,
-						uint32_t *precision,
-						uint32_t *scale,
-						int16_t *isnull) {
-
-	if (mysqlconn->fakebinds || !usestmtprepare) {
-		return true;
-	}
-
-	// don't attempt to bind beyond the number of
-	// variables defined when the query was prepared
-	if (bindcounter>bindcount) {
-		return false;
-	}
-
-	bindvaluesize[bindcounter]=sizeof(double);
-
-	bind[bindcounter].buffer_type=MYSQL_TYPE_STRING;
-	bind[bindcounter].buffer=(void *)value;
-	bind[bindcounter].buffer_length=sizeof(double);
-	bind[bindcounter].length=&bindvaluesize[bindcounter];
-	bind[bindcounter].is_null=(my_bool *)isnull;
-	bindcounter++;
-
-	return true;
-}
-
-bool mysqlcursor::outputBindBlob(const char *variable, 
-						uint16_t variablesize,
-						uint16_t index,
-						int16_t *isnull) {
-	// FIXME: fix this
-
-	if (mysqlconn->fakebinds || !usestmtprepare) {
-		return true;
-	}
-
-	// don't attempt to bind beyond the number of
-	// variables defined when the query was prepared
-	if (bindcounter>bindcount) {
-		return false;
-	}
-
-	//bindvaluesize[bindcounter]=valuesize;
-
-	bind[bindcounter].buffer_type=MYSQL_TYPE_LONG_BLOB;
-	//bind[bindcounter].buffer=(void *)value;
-	//bind[bindcounter].buffer_length=valuesize;
-	//bind[bindcounter].length=&bindvaluesize[bindcounter];
-	bind[bindcounter].is_null=(my_bool *)isnull;
-	bindcounter++;
-
-	return true;
-}
-
-bool mysqlcursor::outputBindClob(const char *variable, 
-						uint16_t variablesize,
-						uint16_t index,
-						int16_t *isnull) {
-	return outputBindBlob(variable,variablesize,index,isnull);
-}
 #endif
 
 bool mysqlcursor::executeQuery(const char *query, uint32_t length,
